Address issue #244 for a "toggle SQL" option for existing queries to prioritise visibility of the data.

--- a/explorer/static/explorer/css/explorer.css
+++ b/explorer/static/explorer/css/explorer.css
@@ -169,3 +169,7 @@ a#fullscreen {
 .sql {
     width: 33%;
 }
+
+.hide-sql {
+    display: none;
+}
